<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp"
    android:theme="@style/Theme.G10_Hamburgueria"
    tools:context=".Pagamento">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/red"
        android:titleTextColor="@android:color/white"
        android:layout_gravity="end"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_details"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payment"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#FFFFFF"
        android:padding="16dp"
        android:layout_marginBottom="16dp">

        <Button
            android:id="@+id/btnDebito"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/debit"
            android:background="#2C2C2C"
            android:textColor="#FFFFFF"/>

        <Button
            android:id="@+id/btnCredito"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/credit"
            android:background="#2C2C2C"
            android:textColor="#FFFFFF"
            android:layout_marginTop="8dp"/>

        <Button
            android:id="@id/btnCash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cash"
            android:background="#2C2C2C"
            android:textColor="#FFFFFF"
            android:layout_marginTop="8dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnPagar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pay"
        android:backgroundTint="#FF0000"
        android:textColor="#FFFFFF"/>
</LinearLayout>
